[gd_scene load_steps=37 format=3 uid="uid://cdiktf378osju"]

[ext_resource type="Texture2D" uid="uid://dj6j6nypmwwob" path="res://Assets/Animations/StageComponents/Sheep/eating_00.png" id="1_7q3yk"]
[ext_resource type="Texture2D" uid="uid://dkq2yekeey4vu" path="res://Assets/Animations/StageComponents/Sheep/eating_01.png" id="2_ajid7"]
[ext_resource type="Texture2D" uid="uid://dtprcscqplt0j" path="res://Assets/Animations/StageComponents/Sheep/eating_02.png" id="3_g7pbr"]
[ext_resource type="Texture2D" uid="uid://dgye0147tl2ef" path="res://Assets/Animations/StageComponents/Sheep/eating_03.png" id="4_x6xfl"]
[ext_resource type="Texture2D" uid="uid://cnvu8rkd5g45d" path="res://Assets/Animations/StageComponents/Sheep/eating_04.png" id="5_ivpwh"]
[ext_resource type="Texture2D" uid="uid://djewitgl7hron" path="res://Assets/Animations/StageComponents/Sheep/eating_05.png" id="6_npw6b"]
[ext_resource type="Texture2D" uid="uid://c7ge0qehymq88" path="res://Assets/Animations/StageComponents/Sheep/eating_06.png" id="7_j2qpr"]
[ext_resource type="Texture2D" uid="uid://box1wr1cjxxsc" path="res://Assets/Animations/StageComponents/Sheep/eating_07.png" id="8_0itmx"]
[ext_resource type="Texture2D" uid="uid://basmprk324qyb" path="res://Assets/Animations/StageComponents/Sheep/eating_08.png" id="9_ikr43"]
[ext_resource type="Texture2D" uid="uid://dccdkygafre2e" path="res://Assets/Animations/StageComponents/Sheep/eating_09.png" id="10_oj8oy"]
[ext_resource type="Texture2D" uid="uid://cgf7ydkvhygwq" path="res://Assets/Animations/StageComponents/Sheep/eating_10.png" id="11_styf4"]
[ext_resource type="Texture2D" uid="uid://cakyck4f71mh4" path="res://Assets/Animations/StageComponents/Sheep/eating_11.png" id="12_gdlyl"]
[ext_resource type="Texture2D" uid="uid://cjx4ksi6jfegw" path="res://Assets/Animations/StageComponents/Sheep/eating_12.png" id="13_rk6ex"]
[ext_resource type="Texture2D" uid="uid://ikbleydlryo" path="res://Assets/Animations/StageComponents/Sheep/eating_13.png" id="14_kl1jl"]
[ext_resource type="Texture2D" uid="uid://dd4vg307v4maj" path="res://Assets/Animations/StageComponents/Sheep/eating_14.png" id="15_d6a1t"]
[ext_resource type="Texture2D" uid="uid://do65qttc3hfhh" path="res://Assets/Animations/StageComponents/Sheep/eating_15.png" id="16_6ns3e"]
[ext_resource type="Texture2D" uid="uid://c0j6wsu4ogdre" path="res://Assets/Animations/StageComponents/Sheep/eating_16.png" id="17_3tcmn"]
[ext_resource type="Texture2D" uid="uid://chtltkqomubga" path="res://Assets/Animations/StageComponents/Sheep/eating_17.png" id="18_oku4d"]
[ext_resource type="Texture2D" uid="uid://pvnh3fthcql1" path="res://Assets/Animations/StageComponents/Sheep/eating_18.png" id="19_43ky5"]
[ext_resource type="Texture2D" uid="uid://btwow1klos6ld" path="res://Assets/Animations/StageComponents/Sheep/eating_19.png" id="20_gkyul"]
[ext_resource type="Texture2D" uid="uid://cvi08ip2y7axk" path="res://Assets/Animations/StageComponents/Sheep/eating_20.png" id="21_vtwyg"]
[ext_resource type="Texture2D" uid="uid://bajg2yqlokgmp" path="res://Assets/Animations/StageComponents/Sheep/eating_21.png" id="22_qg06t"]
[ext_resource type="Texture2D" uid="uid://o8174dt1qun1" path="res://Assets/Animations/StageComponents/Sheep/eating_22.png" id="23_87bt6"]
[ext_resource type="Texture2D" uid="uid://bdxubgbr7e2ul" path="res://Assets/Animations/StageComponents/Sheep/eating_23.png" id="24_d7v41"]
[ext_resource type="Texture2D" uid="uid://dominc7nmck66" path="res://Assets/Animations/StageComponents/Sheep/eating_24.png" id="25_7013q"]
[ext_resource type="Texture2D" uid="uid://cppqrnqq0l7sw" path="res://Assets/Animations/StageComponents/Sheep/eating_25.png" id="26_as4ym"]
[ext_resource type="Texture2D" uid="uid://c3hiduw0a5faw" path="res://Assets/Animations/StageComponents/Sheep/eating_26.png" id="27_5w800"]
[ext_resource type="Texture2D" uid="uid://nip85bpfqljg" path="res://Assets/Animations/StageComponents/Sheep/eating_27.png" id="28_4k3jq"]
[ext_resource type="Texture2D" uid="uid://dcbpo314n454l" path="res://Assets/Animations/StageComponents/Sheep/eating_28.png" id="29_r3m4h"]
[ext_resource type="Texture2D" uid="uid://ckrs4an1xnk0i" path="res://Assets/Animations/StageComponents/Sheep/eating_29.png" id="30_7igt5"]
[ext_resource type="Texture2D" uid="uid://bx62psvmplou8" path="res://Assets/Animations/StageComponents/Sheep/eating_30.png" id="31_fvvwl"]
[ext_resource type="Script" path="res://Scripts/StageComponents/sheep.gd" id="32_gu1y4"]
[ext_resource type="AudioStream" uid="uid://vsea0nxbgbwk" path="res://Assets/Sounds/FXs/Stages/sheep1.wav" id="33_e8avb"]
[ext_resource type="AudioStream" uid="uid://ccrlt60ca4fgg" path="res://Assets/Sounds/FXs/Stages/sheep2.wav" id="34_soyas"]
[ext_resource type="AudioStream" uid="uid://c340kxosqnvgs" path="res://Assets/Sounds/FXs/Stages/sheep3.wav" id="35_see7q"]

[sub_resource type="SpriteFrames" id="SpriteFrames_4pyq8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_7q3yk")
}, {
"duration": 1.0,
"texture": ExtResource("2_ajid7")
}, {
"duration": 1.0,
"texture": ExtResource("3_g7pbr")
}, {
"duration": 1.0,
"texture": ExtResource("4_x6xfl")
}, {
"duration": 1.0,
"texture": ExtResource("5_ivpwh")
}, {
"duration": 1.0,
"texture": ExtResource("6_npw6b")
}, {
"duration": 1.0,
"texture": ExtResource("7_j2qpr")
}, {
"duration": 1.0,
"texture": ExtResource("8_0itmx")
}, {
"duration": 1.0,
"texture": ExtResource("9_ikr43")
}, {
"duration": 1.0,
"texture": ExtResource("10_oj8oy")
}, {
"duration": 1.0,
"texture": ExtResource("11_styf4")
}, {
"duration": 1.0,
"texture": ExtResource("12_gdlyl")
}, {
"duration": 1.0,
"texture": ExtResource("13_rk6ex")
}, {
"duration": 1.0,
"texture": ExtResource("14_kl1jl")
}, {
"duration": 1.0,
"texture": ExtResource("15_d6a1t")
}, {
"duration": 1.0,
"texture": ExtResource("16_6ns3e")
}, {
"duration": 1.0,
"texture": ExtResource("17_3tcmn")
}, {
"duration": 1.0,
"texture": ExtResource("18_oku4d")
}, {
"duration": 1.0,
"texture": ExtResource("19_43ky5")
}, {
"duration": 1.0,
"texture": ExtResource("20_gkyul")
}, {
"duration": 1.0,
"texture": ExtResource("21_vtwyg")
}, {
"duration": 1.0,
"texture": ExtResource("22_qg06t")
}, {
"duration": 1.0,
"texture": ExtResource("23_87bt6")
}, {
"duration": 1.0,
"texture": ExtResource("24_d7v41")
}, {
"duration": 1.0,
"texture": ExtResource("25_7013q")
}, {
"duration": 1.0,
"texture": ExtResource("26_as4ym")
}, {
"duration": 1.0,
"texture": ExtResource("27_5w800")
}, {
"duration": 1.0,
"texture": ExtResource("28_4k3jq")
}, {
"duration": 1.0,
"texture": ExtResource("29_r3m4h")
}, {
"duration": 1.0,
"texture": ExtResource("30_7igt5")
}, {
"duration": 1.0,
"texture": ExtResource("31_fvvwl")
}],
"loop": false,
"name": &"eating",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_7q3yk")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[node name="Sheep" type="AnimatedSprite2D"]
sprite_frames = SubResource("SpriteFrames_4pyq8")
animation = &"idle"
script = ExtResource("32_gu1y4")

[node name="Sheep1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("33_e8avb")
max_polyphony = 10

[node name="Sheep2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("34_soyas")
max_polyphony = 10

[node name="Sheep3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("35_see7q")
max_polyphony = 10

[node name="ExplodeButton" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = -25.0
offset_top = -25.0
offset_right = 33.0
offset_bottom = 21.0
focus_mode = 0

[connection signal="pressed" from="ExplodeButton" to="." method="_on_explode_button_pressed"]
